feat/Added Logo text

--- a/index.html
+++ b/index.html
@@ -9,19 +9,9 @@
 
 <body>
     <header>
-        <h1>Beau Fashion House</h1>
-        <p>Where fashion meets luxury</p>
+        <div>
+            Beau
+        </div>
     </header>
-
-    <h1>Materials we have</h1>
-    <ol>
-        <li>Cotton</li>
-        <li>Silk</li>
-    </ol>
-
-    <ul>
-        <li>Lace</li>
-        <li>Wool</li>
-    </ul>
 </body>
 </html>
